# subreddit-scraper

./: .gitignore  README.md  pyproject.toml
src/: data_displayer.py  data_ingestor.py  database_manager.py  main.py  models.py  setup_db.py
